--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             <form>
                 <textarea id="lenker">Legg til lenke her, separer flere linker med komma</textarea>
                 <input type="text" id="html-element" placeholder="HTML Element med relevant text (CSS syntax)">
+                <input type="number" id="number-of-words" min="1" max="20" placeholder="10">
                 <button type="submit" id="klikk-meg">Send data</button>
             </form>
             <section>
