--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,6 @@
         <footer>
             &copy; Simon Opheim
         </footer>
-        <script src="./main.js" type="text/javascript"></script>
+        <script src="/src/main.js" type="module"></script>
     </body>
 </html>
