--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
                     </div>
                 </form>
             </section>
-            <section class="row">
+            <section class="row justify-content-center">
                     <div id="word-cloud"></div>
             </section>
             
         </main>
         <footer>
-            &copy; Simon Opheim
+            Ordskyen er laget ved hjelp av d3.js og d3-word-cloud..
         </footer>
         <script src="/dist/main.js" type="text/javascript"></script>
     </body>
