restructured folder and refactored functions for RESTfull server

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,6 @@
         <footer>
             Ordskyen er laget ved hjelp av d3.js og d3-word-cloud..
         </footer>
-        <script src="/dist/main.js" type="text/javascript"></script>
+        <script src="./main.js" type="text/javascript"></script>
     </body>
 </html>
